--- a/02_dom/one.html
+++ b/02_dom/one.html
@@ -14,7 +14,16 @@
     <div>
         <h1 id="title" class="heading">DOM learning on 
          chai aur code</h1>
-        <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum autem molestiae exercitationem corrupti deleniti illum quia, eligendi nobis laborum corporis vel neque, dolor harum voluptatibus non nostrum accusamus quisquam dolorem!</p>
+         <h2>Lorem ipsum dolor sit amet</h2>
+         <h2>Lorem ipsum dolor sit amet</h2>
+        <p> Lorem ipsum dolor sit amet consectetur adipisicing laborum corporis vel neque, 
+            dolor accusamus quisquam dolorem!</p>
+            <ul>
+                <li class = "list-item">two</li>
+                <li class = "list-item">one</li>
+                <li class = "list-item">three</li>
+                <li class = "list-item">four</li>
+            </ul>
     </div>
 </body>
 </html>
